--- a/src/components/modal/ImageModal.module.css
+++ b/src/components/modal/ImageModal.module.css
@@ -22,8 +22,8 @@
   position: absolute;
   height: 3rem;
   width: 3rem;
-  top: 10%;
-  right: 10%;
+  top: 5%;
+  right: 5%;
   color: white;
   z-index: 1000;
   background-color: rgba(0, 0, 0, 0.75);
