--- a/src/index.css
+++ b/src/index.css
@@ -125,11 +125,7 @@ table {
 /* fim do reset */
 
 html {
-  font-family: 'Cinzel', serif;
-}
-
-body {
-  /* background-color: black; */
+  font-family: 'Open Sans', sans-serif;
 }
 
 .icon-small {
