--- a/src/pages/AllPictures.module.css
+++ b/src/pages/AllPictures.module.css
@@ -50,7 +50,7 @@
   color: white;
   font-size: 1rem;
   border-radius: 0 0 10px 10px;
-  padding: 0.3rem;
+  padding: 0.3rem 1rem;
   align-items: center;
 }
 
